# quant_library

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA_SOURCE_ARCHITECTURE.md  LICENSE  PAPER_TRADING_IMPLEMENTATION.md  PRIVACY_POLICY.md  REACT_UI_INTEGRATION_SUMMARY.md  README.md  SECURITY_ANALYSIS.md  TERMS_OF_SERVICE.md  pyproject.toml  requirements.txt  setup.py  start_api.sh  tickers.json
.cursor/agents/: setup-assistant.md
React_App/: .env.example  README.md  WORKFLOW_USAGE_EXAMPLE.md  index.html  package-lock.json  package.json  vite.config.js
React_App/src/: App.jsx  main.jsx
api/: README.md  main.py  requirements.txt
api/models/: schemas.py
api/routers/: backtest.py  data.py  database.py  database_info.py  deployment.py  fundamental.py  indicators.py  issues.py  paper_trading.py  settings.py  strategies.py  versioning.py  workflows.py
api/utils/: ai_client.py  api_key_storage.py  backtest_storage.py  encryption.py  github_issue.py
docs/: ALGORITHM_FRAMEWORK.md  DATA_PUBLICATION_POLICY.md  DATA_SETUP.md  INTERNAL_IMPROVEMENT_SUGGESTIONS.md  INTERNAL_PROJECT_SUMMARY.md  QUICK_START.md  STRATEGY_LIBRARY.md  STREAMLIT_GUIDE.md
examples/: bollinger_bands_strategy.py  macd_strategy.py  moving_average_crossover.py  risk_metrics_analysis.py  rsi_strategy.py  simple_strategy.py  walkforward_analysis.py
examples/notebooks/: research_template.ipynb
scripts/: add_api_keys_table.py  add_backtest_table.py  add_custom_name_column.py  check_backtest_table.py  create_source_databases.py  fetch_all_tickers.py  fetch_all_tickers_yahoo_max.py  init_database.py  manual_fetcher.py  migrate_to_database.py  run_streamlit.sh  test_issue_logging.py
src/quantlib/: __init__.py
src/quantlib/risk/: var.py  (+5 more)
streamlit_app/: README.md  __init__.py  app.py
tests/: __init__.py  test_basic_functionality.py  test_data.py  test_indicators.py  test_integration.py  test_risk.py  test_with_sample_data.py
(+181 files in other folders)
